--- a/index.html
+++ b/index.html
@@ -11,14 +11,35 @@
 <body>
 
   <div class="flexbox" id="box1">
-<div class="item">
-
+  <div class="item"></div>
+  <div class="item"></div>
 </div>
-<div class="item">
 
+<br> 
+
+<div class="flexbox" id="box2">
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
 </div>
+
+<br>
+
+<div class="flexbox" id="box3">
+  <div class="item"></div>
+</div>
+
+<br>
+
+ <div class="flexbox" id="box4">
+  <div class="flexbox">
+  <div class="item"></div>
+  <div class="item"></div>
   </div>
+</div>
 
+<br>
 
 
 
