added content to the boxes

--- a/index.html
+++ b/index.html
@@ -11,18 +11,37 @@
 <body>
 
   <div class="flexbox" id="box1">
-  <div class="item"></div>
-  <div class="item"></div>
+  <div class="item">
+    <h1>The Ultimate Marketplace:</h1>
+    <p>Where small buisnesses and marketplaces collide.</p>
+    <button>Sign Up</button>
+  </div>
+  <div class="item">
+    <img src="https://i.ytimg.com/vi/vwoBRVgkAM8/maxresdefault.jpg" height="200px">
+  </div>
 </div>
 
-<br> 
+<h2>Some Cool Buisnesses</h2>
+
+
 
 <div class="flexbox" id="box2">
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
+  <div class="item">
+     <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" height="75px">
+     <p id="box2text">Company that sells cool loking old school computer</p>
+  </div>
+
+  <div class="item">
+     <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" height="75px">
+  </div>
+  <div class="item">
+     <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" height="75px">
+  </div>
+  <div class="item">
+     <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" height="75px">
+  </div>
 </div>
+
 
 <br>
 
